# arbybot

./: .gitignore  PKG-INFO  README.md  Roadmap.md  Status_M1.md  Status_M2.2.md  Status_M2.3.md  Status_M2.md  _WIP_diff.patch  __init__.py  block.py  cex.yaml  chains.yaml  constants.py  core_tokens.yaml  dexes.yaml  entry_points.txt  erc20.json  intent.README.md  logging.py  math.py  models.py  paper_trades_20260111_121619.jsonl  pyproject.toml  registry_20260111_121619.json  reject_histogram_20260111_121621.json  requirements-dev.txt  run_paper.py  scan_20260111_121621.json  strategy.yaml  test_exceptions.py  test_gates.py  test_models.py  test_paper_trading.py  test_time.py  time.py  truth_report.py  truth_report_20260111_121621.json  uniswap_v2_pair.json  uniswap_v2_router.json  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  issue-3-verification.yml  test.yaml  test.yml
arby.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chains/: block.py  providers.py
config/: __init__.py  chains.yaml  core_tokens.yaml  dexes.yaml  fees.yaml  intent.txt  real_m5_0_golden.yaml  real_minimal.yaml  smoke_minimal.py  strategy.yaml
core/: __init__.py  constants.py  exceptions.py  format_money.py  logging.py  math.py  models.py  time.py  validators.py
data/: __init__.py
data/registry/: registry_20260111_112320.json  registry_20260111_114249.json  registry_20260111_121619.json  registry_20260111_171903.json  registry_20260111_173325.json
data/reports/: anchor_verification.json  reject_histogram_20260108_100938.json  reject_histogram_20260109_102525.json  reject_histogram_20260110_095840.json  reject_histogram_20260110_101649.json  reject_histogram_20260110_103012.json  reject_histogram_20260111_101300.json  reject_histogram_20260111_102714.json  reject_histogram_20260111_105734.json  reject_histogram_20260111_112322.json  reject_histogram_20260111_114251.json  reject_histogram_20260111_121621.json  reject_histogram_20260111_171905.json  reject_histogram_20260111_173326.json  reject_histogram_20260111_180526.json  truth_report_20260111_114251.json  truth_report_20260111_121621.json  truth_report_20260111_171905.json  truth_report_20260111_173326.json  truth_report_20260111_180526.json
data/snapshots/: scan_20260108_100938.json  scan_20260109_102525.json  scan_20260110_095840.json  scan_20260110_101649.json  scan_20260110_103012.json  scan_20260111_101300.json  scan_20260111_102714.json  scan_20260111_105734.json  scan_20260111_112322.json  scan_20260111_114251.json  scan_20260111_121621.json  scan_20260111_171905.json  scan_20260111_173326.json  scan_20260111_180526.json
data/trades/: paper_trades_20260111_105446.jsonl  paper_trades_20260111_105733.jsonl  paper_trades_20260111_112320.jsonl  paper_trades_20260111_114249.jsonl  paper_trades_20260111_121619.jsonl  paper_trades_20260111_171903.jsonl  paper_trades_20260111_173325.jsonl  paper_trades_20260111_180525.jsonl
dex/: __init__.py  gating.py
dex/abi/: uniswap_v2_factory.json
dex/adapters/: __init__.py  algebra.py
discovery/: __init__.py  quarantine.py  registry.py
docs/: FILES_SUMMARY.md  INDEX.md  ISSUE_3_CHECKLIST.md  README.md  Status_10step_fix_v3.md  Status_M2.3.md  Status_M3.md  Status_M3_1.md  Status_M3_P2_quality_v2.md  Status_M3_P2_quality_v3.md  Status_M3_P2_quality_v4.md  TESTING.md  WORKFLOW.md
docs/status/: ARCHIVE_MAP.md  (+8 more)
engine/: __init__.py
execution/: __init__.py  dex_dex_executor.py  simulator.py  state_machine.py
monitoring/: __init__.py  quality_kpis.py  truth_report.py
scripts/: __init__.py  check_issue3_compliance.py  ci_m3_gate.py  ci_m4_gate.py  ci_m5_0_gate.py  generate_smoke_report.py  smoke_test.py  verify_all.ps1  verify_anchors.py
strategy/: __init__.py  config.py  gates.py  paper_trading.py  quarantine.py
tests/: __init__.py  conftest.py
tools/: claude_packet.ps1  new_run.ps1
utils/: __init__.py  validators.py
(+56 files in other folders)
