[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arby"
version = "0.1.0"
description = "DEX-DEX Arbitrage Engine with Truth Engine and Execution"
readme = "README.md"
requires-python = ">=3.11,<3.14"  # 3.11 or 3.12 only, 3.14 is unstable

license = {text = "MIT"}
authors = [
    {name = "ARBY Team"}
]

dependencies = [
    # Web3 / Blockchain
    "web3>=6.15.0",
    "eth-abi>=5.0.0",
    "eth-account>=0.11.0",
    
    # HTTP / Async
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    
    # Data
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    
    # Database
    "aiosqlite>=0.19.0",
    
    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",
    
    # Utilities
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]

[project.scripts]
arby-scan = "strategy.jobs.run_scan:main"
arby-paper = "strategy.jobs.run_paper:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "chains*", "dex*", "cex*", "discovery*", "engine*", "execution*", "strategy*", "monitoring*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
